# tuinator

./: .cruft.json  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api_docs.md
src/tuinator/: __main__.py  repositories.py  tui.py
